force-app/main/default/objects/NotificationWorker__e/NotificationWorker__e.object-meta.xml
<CustomObject>
    <label>NotificationWorker</label>
    <pluralLabel>NotificationWorkers</pluralLabel>
</CustomObject>