force-app/main/default/objects/NotificationWorker__e/fields/artlQuoteId__c.field-meta.xml
<CustomField>
    <fullName>artlQuoteId__c</fullName>
    <label>QuoteId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>