force-app/main/default/objects/NotificationWorker__e/fields/failureCount__c.field-meta.xml
<CustomField>
    <fullName>failureCount__c</fullName>
    <label>failureCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>