force-app/main/default/objects/NotificationWorker__e/fields/SubEventName__c.field-meta.xml
<CustomField>
    <fullName>SubEventName__c</fullName>
    <label>SubEventName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>