force-app/main/default/objects/NotificationWorker__e/fields/successCount__c.field-meta.xml
<CustomField>
    <fullName>successCount__c</fullName>
    <label>successCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>